# server/go/model_get_user_list_output.go
@@ -1,0 +1,38 @@
+/*
+ * HelloApiSchema
+ *
+ * Practice api schema
+ *
+ * API version: 1.0.0
+ * Contact: doriven@example.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type GetUserListOutput struct {
+
+	UserList []GetUserListOutputUserList `json:"user_list,omitempty"`
+}
+
+// AssertGetUserListOutputRequired checks if the required fields are not zero-ed
+func AssertGetUserListOutputRequired(obj GetUserListOutput) error {
+	for _, el := range obj.UserList {
+		if err := AssertGetUserListOutputUserListRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertRecurseGetUserListOutputRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of GetUserListOutput (e.g. [][]GetUserListOutput), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseGetUserListOutputRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aGetUserListOutput, ok := obj.(GetUserListOutput)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertGetUserListOutputRequired(aGetUserListOutput)
+	})
+}
